--- a/view/frontend/templates/modal.phtml
+++ b/view/frontend/templates/modal.phtml
@@ -1,2 +1,2 @@
 <?php /* @var \Mineralair\Core\Js $block */ ?>
-<div class='mnr-modal df-hidden'>Sorry for the inconvenience, but PayPal/Amazon orders are required to be paid in full and you have an item(s) in your cart with recurring payments. Would you like to convert your order to one payment?</div>
+<div class='mnr-modal-content df-hidden'>Sorry for the inconvenience, but PayPal/Amazon orders are required to be paid in full and you have an item(s) in your cart with recurring payments. Would you like to convert your order to one payment?</div>
