--- a/view/frontend/web/_cart.less
+++ b/view/frontend/web/_cart.less
@@ -4,6 +4,7 @@
 // for an order with an «autoshipment» product": https://github.com/mineralair/core/issues/2
 .mnr-modal {
 	.modal-inner-wrap {
+		margin-top: 10%;
 		// 2019-03-16 "How is the mage.modal UI widget's animation implemented?" https://mage2.pro/t/1306
 		transition: none;
 	}
