--- a/view/frontend/web/_cart.less
+++ b/view/frontend/web/_cart.less
@@ -3,7 +3,7 @@
 // if a customer tries to use the PayPal or Amazon Pay payment method
 // for an order with an «autoshipment» product": https://github.com/mineralair/core/issues/2
 .mnr-modal {
-	max-width: 55em;
+	max-width: 50em;
 	margin: 0 auto;
 	.modal-inner-wrap {
 		margin-top: 35%;
@@ -13,6 +13,7 @@
 			padding-top: 0;
 			padding-left: 50px;
 			padding-right: 50px;
+			padding-bottom: 12px;
 			.mnr-modal-head {
 				text-align: center;
 				.mnr-modal-amazon {
@@ -36,12 +37,15 @@
 				font-weight: bold;
 				letter-spacing: 1.5px;
 				line-height: 2;
-				margin-bottom: 1em;
+				margin-bottom: 0;
 				margin-top: 1em;
 			}
 		}
 		.modal-footer {
 			background: none;
+			padding-left: 50px;
+			padding-right: 50px;
+			padding-top: 1.5rem;
 			.action.primary {
 				background-color: #DC536F;
 				box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.5);
