--- a/view/frontend/web/_cart.less
+++ b/view/frontend/web/_cart.less
@@ -43,6 +43,7 @@
 		}
 		.modal-footer {
 			background: none;
+			padding-bottom: 1.5rem;
 			padding-left: 50px;
 			padding-right: 50px;
 			padding-top: 1.5rem;
@@ -59,6 +60,20 @@
 					background: #b65a65;
 					border-color: #808080 !important;
 					color: #808080 !important;
+				}
+			}
+			.action.mnr-no {
+				background: none;
+				border: 0;
+				display: block;
+				margin: 1em auto 0 auto;
+				&:hover span {
+					color: #e6c7b5;
+					text-decoration: underline;
+				};
+				span {
+					color: #525252;
+					font-weight: bold;
 				}
 			}
 		}
